Add initial HTML structure and logo image for Astronautas page

--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astronautas</title>
-    <link rel="stylesheet" href="./css/main.css">
+    /!-- favicon--!/
+    <link rel="short icon" href="./favicon.ico"  />
+    <link rel="icon" type="image/png" href=".favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href=".favicon/favicon.svg" />
+    <link rel="shortcut icon" href=".favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href=".favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="stylesheet" href=".favicon/css/main.css">
 </head>
 
 <body>
     <header>
-        <img src="./img/clay (2).webp" alt="Logo">
-        <nav>
-            <a href="#">About</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Job</a>
-            <a href="#">Contact</a>
+        <img class="logo" src="./img/clay (2).webp" alt="Logo">
+        <nav class="main-nav">
+            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="#">Job</a>
+            <a class="nav-link" href="#">Contact</a>
         </nav>
     </header>
 
@@ -40,7 +47,7 @@
             <a href="#">IN</a>
             <a href="#">LN</a>
         </div>
-        <p>(c) 2025 - All rights reserved</p>
+        <p class="red">(c) 2025 - All rights reserved</p>
     </footer>
 </body>
 
